# ethminer

./: CMakeLists.txt
ethminer/: MinerAux.h
libethash-cpu/: CMakeLists.txt  CPUMiner.cpp  CPUMiner.h  ethash_cpu.h
libethcore/: CMakeLists.txt  Miner.h
libpoolprotocols/: PoolManager.cpp
